dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-color
  labels:
    app: webapp-color
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-color
  template:
    metadata:
      labels:
        app: webapp-color
    spec:
      containers:
      - name: webapp-color
        image: kodekloud/webapp-color
        ports:
        - containerPort: 8080
