image-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-image-updater
  template:
    metadata:
      labels:
        app: argocd-image-updater
    spec:
      serviceAccountName: argocd-image-updater
      containers:
        - name: argocd-image-updater
          image: argoprojlabs/argocd-image-updater:latest
