sm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-secret-pod
  namespace: default
spec:
  containers:
  - name: test-container
    image: amazonlinux:2
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "while true; do cat /mnt/secrets-store/my-secret; sleep 10; done;" ]
    volumeMounts:
    - name: secrets-store-inline
      mountPath: "/mnt/secrets-store"
      readOnly: true
  volumes:
  - name: secrets-store-inline
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: "aws-secrets"
