sc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-color
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "false" # Ensure this line is not set to "true"
spec:
  type: LoadBalancer
  selector:
    app: webapp-color
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
