ing-nginx.yaml
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # Use AWS ALB as the ingress controller
    kubernetes.io/ingress.class: alb
    # Specify that the ALB should be internet-facing
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Enable SSL termination (Optional, for HTTP only remove this)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # Target type can be instance or IP, depending on your setup
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
